nodes/mc/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    REGEX
    RE

Grammar

Rule 0     S' -> route
Rule 1     route -> node > node
Rule 2     route -> transform > node
Rule 3     route -> node > route
Rule 4     route -> transform > route
Rule 5     route -> node BI node
Rule 6     route -> node BI route
Rule 7     node -> NAME
Rule 8     transform -> F filter
Rule 9     transform -> E edit
Rule 10    transform -> R replace
Rule 11    transform -> FE filter edit
Rule 12    transform -> FR filter replace
Rule 13    filter -> NAME
Rule 14    filter -> { test }
Rule 15    filter -> NAME { test }
Rule 16    edit -> NAME
Rule 17    edit -> NAME NAME
Rule 18    edit -> script
Rule 19    edit -> NAME script
Rule 20    edit -> NAME NAME script
Rule 21    replace -> map
Rule 22    replace -> NAME map
Rule 23    replace -> NAME NAME map
Rule 24    script -> { statements }
Rule 25    statements -> statement
Rule 26    statements -> statement ; statements
Rule 27    statement -> POP var
Rule 28    statement -> var = expr
Rule 29    statement -> var PE expr
Rule 30    statement -> var ME expr
Rule 31    statement -> var TE expr
Rule 32    statement -> var DE expr
Rule 33    expr -> test
Rule 34    expr -> test ? expr : expr
Rule 35    expr -> expr + expr
Rule 36    expr -> expr - expr
Rule 37    expr -> expr * expr
Rule 38    expr -> expr / expr
Rule 39    expr -> - expr
Rule 40    expr -> list
Rule 41    list -> [ expr_list ]
Rule 42    expr -> map
Rule 43    expr -> ( expr )
Rule 44    expr -> value
Rule 45    expr -> NAME
Rule 46    expr -> ID
Rule 47    test -> expr EQ expr
Rule 48    test -> expr GE expr
Rule 49    test -> expr > expr
Rule 50    test -> expr < expr
Rule 51    test -> expr LE expr
Rule 52    test -> ( test )
Rule 53    test -> test AND test
Rule 54    test -> ! test
Rule 55    test -> test OR test
Rule 56    expr_list -> expr , expr_list
Rule 57    expr_list -> expr
Rule 58    map -> { mappings }
Rule 59    mappings -> NAME : expr , mappings
Rule 60    mappings -> NAME : expr
Rule 61    var -> NAME
Rule 62    value -> FLOAT
Rule 63    value -> INT
Rule 64    value -> STRING
Rule 65    value -> TRUE
Rule 66    value -> FALSE

Terminals, with rules where they appear

!                    : 54
(                    : 43 52
)                    : 43 52
*                    : 37
+                    : 35
,                    : 56 59
-                    : 36 39
/                    : 38
:                    : 34 59 60
;                    : 26
<                    : 50
=                    : 28
>                    : 1 2 3 4 49
?                    : 34
AND                  : 53
BI                   : 5 6
DE                   : 32
E                    : 9
EQ                   : 47
F                    : 8
FALSE                : 66
FE                   : 11
FLOAT                : 62
FR                   : 12
GE                   : 48
ID                   : 46
INT                  : 63
LE                   : 51
ME                   : 30
NAME                 : 7 13 15 16 17 17 19 20 20 22 23 23 45 59 60 61
OR                   : 55
PE                   : 29
POP                  : 27
R                    : 10
RE                   : 
REGEX                : 
STRING               : 64
TE                   : 31
TRUE                 : 65
[                    : 41
]                    : 41
error                : 
{                    : 14 15 24 58
}                    : 14 15 24 58

Nonterminals, with rules where they appear

edit                 : 9 11
expr                 : 28 29 30 31 32 34 34 35 35 36 36 37 37 38 38 39 43 47 47 48 48 49 49 50 50 51 51 56 57 59 60
expr_list            : 41 56
filter               : 8 11 12
list                 : 40
map                  : 21 22 23 42
mappings             : 58 59
node                 : 1 1 2 3 5 5 6
replace              : 10 12
route                : 3 4 6 0
script               : 18 19 20
statement            : 25 26
statements           : 24 26
test                 : 14 15 33 34 52 53 53 54 55 55
transform            : 2 4
value                : 44
var                  : 27 28 29 30 31 32

Parsing method: LALR

state 0

    (0) S' -> . route
    (1) route -> . node > node
    (2) route -> . transform > node
    (3) route -> . node > route
    (4) route -> . transform > route
    (5) route -> . node BI node
    (6) route -> . node BI route
    (7) node -> . NAME
    (8) transform -> . F filter
    (9) transform -> . E edit
    (10) transform -> . R replace
    (11) transform -> . FE filter edit
    (12) transform -> . FR filter replace

    NAME            shift and go to state 4
    F               shift and go to state 5
    E               shift and go to state 6
    R               shift and go to state 7
    FE              shift and go to state 8
    FR              shift and go to state 9

    route                          shift and go to state 1
    node                           shift and go to state 2
    transform                      shift and go to state 3

state 1

    (0) S' -> route .



state 2

    (1) route -> node . > node
    (3) route -> node . > route
    (5) route -> node . BI node
    (6) route -> node . BI route

    >               shift and go to state 10
    BI              shift and go to state 11


state 3

    (2) route -> transform . > node
    (4) route -> transform . > route

    >               shift and go to state 12


state 4

    (7) node -> NAME .

    >               reduce using rule 7 (node -> NAME .)
    BI              reduce using rule 7 (node -> NAME .)
    $end            reduce using rule 7 (node -> NAME .)


state 5

    (8) transform -> F . filter
    (13) filter -> . NAME
    (14) filter -> . { test }
    (15) filter -> . NAME { test }

    NAME            shift and go to state 14
    {               shift and go to state 15

    filter                         shift and go to state 13

state 6

    (9) transform -> E . edit
    (16) edit -> . NAME
    (17) edit -> . NAME NAME
    (18) edit -> . script
    (19) edit -> . NAME script
    (20) edit -> . NAME NAME script
    (24) script -> . { statements }

    NAME            shift and go to state 17
    {               shift and go to state 19

    edit                           shift and go to state 16
    script                         shift and go to state 18

state 7

    (10) transform -> R . replace
    (21) replace -> . map
    (22) replace -> . NAME map
    (23) replace -> . NAME NAME map
    (58) map -> . { mappings }

    NAME            shift and go to state 22
    {               shift and go to state 23

    replace                        shift and go to state 20
    map                            shift and go to state 21

state 8

    (11) transform -> FE . filter edit
    (13) filter -> . NAME
    (14) filter -> . { test }
    (15) filter -> . NAME { test }

    NAME            shift and go to state 14
    {               shift and go to state 15

    filter                         shift and go to state 24

state 9

    (12) transform -> FR . filter replace
    (13) filter -> . NAME
    (14) filter -> . { test }
    (15) filter -> . NAME { test }

    NAME            shift and go to state 14
    {               shift and go to state 15

    filter                         shift and go to state 25

state 10

    (1) route -> node > . node
    (3) route -> node > . route
    (7) node -> . NAME
    (1) route -> . node > node
    (2) route -> . transform > node
    (3) route -> . node > route
    (4) route -> . transform > route
    (5) route -> . node BI node
    (6) route -> . node BI route
    (8) transform -> . F filter
    (9) transform -> . E edit
    (10) transform -> . R replace
    (11) transform -> . FE filter edit
    (12) transform -> . FR filter replace

    NAME            shift and go to state 4
    F               shift and go to state 5
    E               shift and go to state 6
    R               shift and go to state 7
    FE              shift and go to state 8
    FR              shift and go to state 9

    node                           shift and go to state 26
    route                          shift and go to state 27
    transform                      shift and go to state 3

state 11

    (5) route -> node BI . node
    (6) route -> node BI . route
    (7) node -> . NAME
    (1) route -> . node > node
    (2) route -> . transform > node
    (3) route -> . node > route
    (4) route -> . transform > route
    (5) route -> . node BI node
    (6) route -> . node BI route
    (8) transform -> . F filter
    (9) transform -> . E edit
    (10) transform -> . R replace
    (11) transform -> . FE filter edit
    (12) transform -> . FR filter replace

    NAME            shift and go to state 4
    F               shift and go to state 5
    E               shift and go to state 6
    R               shift and go to state 7
    FE              shift and go to state 8
    FR              shift and go to state 9

    node                           shift and go to state 28
    route                          shift and go to state 29
    transform                      shift and go to state 3

state 12

    (2) route -> transform > . node
    (4) route -> transform > . route
    (7) node -> . NAME
    (1) route -> . node > node
    (2) route -> . transform > node
    (3) route -> . node > route
    (4) route -> . transform > route
    (5) route -> . node BI node
    (6) route -> . node BI route
    (8) transform -> . F filter
    (9) transform -> . E edit
    (10) transform -> . R replace
    (11) transform -> . FE filter edit
    (12) transform -> . FR filter replace

    NAME            shift and go to state 4
    F               shift and go to state 5
    E               shift and go to state 6
    R               shift and go to state 7
    FE              shift and go to state 8
    FR              shift and go to state 9

    transform                      shift and go to state 3
    node                           shift and go to state 30
    route                          shift and go to state 31

state 13

    (8) transform -> F filter .

    >               reduce using rule 8 (transform -> F filter .)


state 14

    (13) filter -> NAME .
    (15) filter -> NAME . { test }

  ! shift/reduce conflict for { resolved as shift
    >               reduce using rule 13 (filter -> NAME .)
    NAME            reduce using rule 13 (filter -> NAME .)
    {               shift and go to state 32

  ! {               [ reduce using rule 13 (filter -> NAME .) ]


state 15

    (14) filter -> { . test }
    (47) test -> . expr EQ expr
    (48) test -> . expr GE expr
    (49) test -> . expr > expr
    (50) test -> . expr < expr
    (51) test -> . expr LE expr
    (52) test -> . ( test )
    (53) test -> . test AND test
    (54) test -> . ! test
    (55) test -> . test OR test
    (33) expr -> . test
    (34) expr -> . test ? expr : expr
    (35) expr -> . expr + expr
    (36) expr -> . expr - expr
    (37) expr -> . expr * expr
    (38) expr -> . expr / expr
    (39) expr -> . - expr
    (40) expr -> . list
    (42) expr -> . map
    (43) expr -> . ( expr )
    (44) expr -> . value
    (45) expr -> . NAME
    (46) expr -> . ID
    (41) list -> . [ expr_list ]
    (58) map -> . { mappings }
    (62) value -> . FLOAT
    (63) value -> . INT
    (64) value -> . STRING
    (65) value -> . TRUE
    (66) value -> . FALSE

    (               shift and go to state 35
    !               shift and go to state 36
    -               shift and go to state 37
    NAME            shift and go to state 41
    ID              shift and go to state 42
    [               shift and go to state 43
    {               shift and go to state 23
    FLOAT           shift and go to state 44
    INT             shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48

    test                           shift and go to state 33
    expr                           shift and go to state 34
    list                           shift and go to state 38
    map                            shift and go to state 39
    value                          shift and go to state 40

state 16

    (9) transform -> E edit .

    >               reduce using rule 9 (transform -> E edit .)


state 17

    (16) edit -> NAME .
    (17) edit -> NAME . NAME
    (19) edit -> NAME . script
    (20) edit -> NAME . NAME script
    (24) script -> . { statements }

    >               reduce using rule 16 (edit -> NAME .)
    NAME            shift and go to state 49
    {               shift and go to state 19

    script                         shift and go to state 50

state 18

    (18) edit -> script .

    >               reduce using rule 18 (edit -> script .)


state 19

    (24) script -> { . statements }
    (25) statements -> . statement
    (26) statements -> . statement ; statements
    (27) statement -> . POP var
    (28) statement -> . var = expr
    (29) statement -> . var PE expr
    (30) statement -> . var ME expr
    (31) statement -> . var TE expr
    (32) statement -> . var DE expr
    (61) var -> . NAME

    POP             shift and go to state 53
    NAME            shift and go to state 55

    statements                     shift and go to state 51
    statement                      shift and go to state 52
    var                            shift and go to state 54

state 20

    (10) transform -> R replace .

    >               reduce using rule 10 (transform -> R replace .)


state 21

    (21) replace -> map .

    >               reduce using rule 21 (replace -> map .)


state 22

    (22) replace -> NAME . map
    (23) replace -> NAME . NAME map
    (58) map -> . { mappings }

    NAME            shift and go to state 56
    {               shift and go to state 23

    map                            shift and go to state 57

state 23

    (58) map -> { . mappings }
    (59) mappings -> . NAME : expr , mappings
    (60) mappings -> . NAME : expr

    NAME            shift and go to state 59

    mappings                       shift and go to state 58

state 24

    (11) transform -> FE filter . edit
    (16) edit -> . NAME
    (17) edit -> . NAME NAME
    (18) edit -> . script
    (19) edit -> . NAME script
    (20) edit -> . NAME NAME script
    (24) script -> . { statements }

    NAME            shift and go to state 17
    {               shift and go to state 19

    edit                           shift and go to state 60
    script                         shift and go to state 18

state 25

    (12) transform -> FR filter . replace
    (21) replace -> . map
    (22) replace -> . NAME map
    (23) replace -> . NAME NAME map
    (58) map -> . { mappings }

    NAME            shift and go to state 22
    {               shift and go to state 23

    replace                        shift and go to state 61
    map                            shift and go to state 21

state 26

    (1) route -> node > node .
    (1) route -> node . > node
    (3) route -> node . > route
    (5) route -> node . BI node
    (6) route -> node . BI route

    $end            reduce using rule 1 (route -> node > node .)
    >               shift and go to state 10
    BI              shift and go to state 11


state 27

    (3) route -> node > route .

    $end            reduce using rule 3 (route -> node > route .)


state 28

    (5) route -> node BI node .
    (1) route -> node . > node
    (3) route -> node . > route
    (5) route -> node . BI node
    (6) route -> node . BI route

    $end            reduce using rule 5 (route -> node BI node .)
    >               shift and go to state 10
    BI              shift and go to state 11


state 29

    (6) route -> node BI route .

    $end            reduce using rule 6 (route -> node BI route .)


state 30

    (2) route -> transform > node .
    (1) route -> node . > node
    (3) route -> node . > route
    (5) route -> node . BI node
    (6) route -> node . BI route

    $end            reduce using rule 2 (route -> transform > node .)
    >               shift and go to state 10
    BI              shift and go to state 11


state 31

    (4) route -> transform > route .

    $end            reduce using rule 4 (route -> transform > route .)


state 32

    (15) filter -> NAME { . test }
    (47) test -> . expr EQ expr
    (48) test -> . expr GE expr
    (49) test -> . expr > expr
    (50) test -> . expr < expr
    (51) test -> . expr LE expr
    (52) test -> . ( test )
    (53) test -> . test AND test
    (54) test -> . ! test
    (55) test -> . test OR test
    (33) expr -> . test
    (34) expr -> . test ? expr : expr
    (35) expr -> . expr + expr
    (36) expr -> . expr - expr
    (37) expr -> . expr * expr
    (38) expr -> . expr / expr
    (39) expr -> . - expr
    (40) expr -> . list
    (42) expr -> . map
    (43) expr -> . ( expr )
    (44) expr -> . value
    (45) expr -> . NAME
    (46) expr -> . ID
    (41) list -> . [ expr_list ]
    (58) map -> . { mappings }
    (62) value -> . FLOAT
    (63) value -> . INT
    (64) value -> . STRING
    (65) value -> . TRUE
    (66) value -> . FALSE

    (               shift and go to state 35
    !               shift and go to state 36
    -               shift and go to state 37
    NAME            shift and go to state 41
    ID              shift and go to state 42
    [               shift and go to state 43
    {               shift and go to state 23
    FLOAT           shift and go to state 44
    INT             shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48

    test                           shift and go to state 62
    expr                           shift and go to state 34
    list                           shift and go to state 38
    map                            shift and go to state 39
    value                          shift and go to state 40

state 33

    (14) filter -> { test . }
    (53) test -> test . AND test
    (55) test -> test . OR test
    (33) expr -> test .
    (34) expr -> test . ? expr : expr

    }               shift and go to state 63
    AND             shift and go to state 64
    OR              shift and go to state 65
    EQ              reduce using rule 33 (expr -> test .)
    GE              reduce using rule 33 (expr -> test .)
    >               reduce using rule 33 (expr -> test .)
    <               reduce using rule 33 (expr -> test .)
    LE              reduce using rule 33 (expr -> test .)
    +               reduce using rule 33 (expr -> test .)
    -               reduce using rule 33 (expr -> test .)
    *               reduce using rule 33 (expr -> test .)
    /               reduce using rule 33 (expr -> test .)
    ?               shift and go to state 66


state 34

    (47) test -> expr . EQ expr
    (48) test -> expr . GE expr
    (49) test -> expr . > expr
    (50) test -> expr . < expr
    (51) test -> expr . LE expr
    (35) expr -> expr . + expr
    (36) expr -> expr . - expr
    (37) expr -> expr . * expr
    (38) expr -> expr . / expr

    EQ              shift and go to state 67
    GE              shift and go to state 68
    >               shift and go to state 69
    <               shift and go to state 70
    LE              shift and go to state 71
    +               shift and go to state 72
    -               shift and go to state 73
    *               shift and go to state 74
    /               shift and go to state 75


state 35

    (52) test -> ( . test )
    (43) expr -> ( . expr )
    (47) test -> . expr EQ expr
    (48) test -> . expr GE expr
    (49) test -> . expr > expr
    (50) test -> . expr < expr
    (51) test -> . expr LE expr
    (52) test -> . ( test )
    (53) test -> . test AND test
    (54) test -> . ! test
    (55) test -> . test OR test
    (33) expr -> . test
    (34) expr -> . test ? expr : expr
    (35) expr -> . expr + expr
    (36) expr -> . expr - expr
    (37) expr -> . expr * expr
    (38) expr -> . expr / expr
    (39) expr -> . - expr
    (40) expr -> . list
    (42) expr -> . map
    (43) expr -> . ( expr )
    (44) expr -> . value
    (45) expr -> . NAME
    (46) expr -> . ID
    (41) list -> . [ expr_list ]
    (58) map -> . { mappings }
    (62) value -> . FLOAT
    (63) value -> . INT
    (64) value -> . STRING
    (65) value -> . TRUE
    (66) value -> . FALSE

    (               shift and go to state 35
    !               shift and go to state 36
    -               shift and go to state 37
    NAME            shift and go to state 41
    ID              shift and go to state 42
    [               shift and go to state 43
    {               shift and go to state 23
    FLOAT           shift and go to state 44
    INT             shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48

    test                           shift and go to state 76
    expr                           shift and go to state 77
    list                           shift and go to state 38
    map                            shift and go to state 39
    value                          shift and go to state 40

state 36

    (54) test -> ! . test
    (47) test -> . expr EQ expr
    (48) test -> . expr GE expr
    (49) test -> . expr > expr
    (50) test -> . expr < expr
    (51) test -> . expr LE expr
    (52) test -> . ( test )
    (53) test -> . test AND test
    (54) test -> . ! test
    (55) test -> . test OR test
    (33) expr -> . test
    (34) expr -> . test ? expr : expr
    (35) expr -> . expr + expr
    (36) expr -> . expr - expr
    (37) expr -> . expr * expr
    (38) expr -> . expr / expr
    (39) expr -> . - expr
    (40) expr -> . list
    (42) expr -> . map
    (43) expr -> . ( expr )
    (44) expr -> . value
    (45) expr -> . NAME
    (46) expr -> . ID
    (41) list -> . [ expr_list ]
    (58) map -> . { mappings }
    (62) value -> . FLOAT
    (63) value -> . INT
    (64) value -> . STRING
    (65) value -> . TRUE
    (66) value -> . FALSE

    (               shift and go to state 35
    !               shift and go to state 36
    -               shift and go to state 37
    NAME            shift and go to state 41
    ID              shift and go to state 42
    [               shift and go to state 43
    {               shift and go to state 23
    FLOAT           shift and go to state 44
    INT             shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48

    test                           shift and go to state 78
    expr                           shift and go to state 34
    list                           shift and go to state 38
    map                            shift and go to state 39
    value                          shift and go to state 40

state 37

    (39) expr -> - . expr
    (33) expr -> . test
    (34) expr -> . test ? expr : expr
    (35) expr -> . expr + expr
    (36) expr -> . expr - expr
    (37) expr -> . expr * expr
    (38) expr -> . expr / expr
    (39) expr -> . - expr
    (40) expr -> . list
    (42) expr -> . map
    (43) expr -> . ( expr )
    (44) expr -> . value
    (45) expr -> . NAME
    (46) expr -> . ID
    (47) test -> . expr EQ expr
    (48) test -> . expr GE expr
    (49) test -> . expr > expr
    (50) test -> . expr < expr
    (51) test -> . expr LE expr
    (52) test -> . ( test )
    (53) test -> . test AND test
    (54) test -> . ! test
    (55) test -> . test OR test
    (41) list -> . [ expr_list ]
    (58) map -> . { mappings }
    (62) value -> . FLOAT
    (63) value -> . INT
    (64) value -> . STRING
    (65) value -> . TRUE
    (66) value -> . FALSE

    -               shift and go to state 37
    (               shift and go to state 81
    NAME            shift and go to state 41
    ID              shift and go to state 42
    !               shift and go to state 36
    [               shift and go to state 43
    {               shift and go to state 23
    FLOAT           shift and go to state 44
    INT             shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48

    expr                           shift and go to state 79
    test                           shift and go to state 80
    list                           shift and go to state 38
    map                            shift and go to state 39
    value                          shift and go to state 40

state 38

    (40) expr -> list .

    EQ              reduce using rule 40 (expr -> list .)
    GE              reduce using rule 40 (expr -> list .)
    >               reduce using rule 40 (expr -> list .)
    <               reduce using rule 40 (expr -> list .)
    LE              reduce using rule 40 (expr -> list .)
    +               reduce using rule 40 (expr -> list .)
    -               reduce using rule 40 (expr -> list .)
    *               reduce using rule 40 (expr -> list .)
    /               reduce using rule 40 (expr -> list .)
    )               reduce using rule 40 (expr -> list .)
    AND             reduce using rule 40 (expr -> list .)
    OR              reduce using rule 40 (expr -> list .)
    ?               reduce using rule 40 (expr -> list .)
    }               reduce using rule 40 (expr -> list .)
    ,               reduce using rule 40 (expr -> list .)
    ]               reduce using rule 40 (expr -> list .)
    :               reduce using rule 40 (expr -> list .)
    ;               reduce using rule 40 (expr -> list .)


state 39

    (42) expr -> map .

    EQ              reduce using rule 42 (expr -> map .)
    GE              reduce using rule 42 (expr -> map .)
    >               reduce using rule 42 (expr -> map .)
    <               reduce using rule 42 (expr -> map .)
    LE              reduce using rule 42 (expr -> map .)
    +               reduce using rule 42 (expr -> map .)
    -               reduce using rule 42 (expr -> map .)
    *               reduce using rule 42 (expr -> map .)
    /               reduce using rule 42 (expr -> map .)
    )               reduce using rule 42 (expr -> map .)
    AND             reduce using rule 42 (expr -> map .)
    OR              reduce using rule 42 (expr -> map .)
    ?               reduce using rule 42 (expr -> map .)
    }               reduce using rule 42 (expr -> map .)
    ,               reduce using rule 42 (expr -> map .)
    ]               reduce using rule 42 (expr -> map .)
    :               reduce using rule 42 (expr -> map .)
    ;               reduce using rule 42 (expr -> map .)


state 40

    (44) expr -> value .

    EQ              reduce using rule 44 (expr -> value .)
    GE              reduce using rule 44 (expr -> value .)
    >               reduce using rule 44 (expr -> value .)
    <               reduce using rule 44 (expr -> value .)
    LE              reduce using rule 44 (expr -> value .)
    +               reduce using rule 44 (expr -> value .)
    -               reduce using rule 44 (expr -> value .)
    *               reduce using rule 44 (expr -> value .)
    /               reduce using rule 44 (expr -> value .)
    )               reduce using rule 44 (expr -> value .)
    AND             reduce using rule 44 (expr -> value .)
    OR              reduce using rule 44 (expr -> value .)
    ?               reduce using rule 44 (expr -> value .)
    }               reduce using rule 44 (expr -> value .)
    ,               reduce using rule 44 (expr -> value .)
    ]               reduce using rule 44 (expr -> value .)
    :               reduce using rule 44 (expr -> value .)
    ;               reduce using rule 44 (expr -> value .)


state 41

    (45) expr -> NAME .

    EQ              reduce using rule 45 (expr -> NAME .)
    GE              reduce using rule 45 (expr -> NAME .)
    >               reduce using rule 45 (expr -> NAME .)
    <               reduce using rule 45 (expr -> NAME .)
    LE              reduce using rule 45 (expr -> NAME .)
    +               reduce using rule 45 (expr -> NAME .)
    -               reduce using rule 45 (expr -> NAME .)
    *               reduce using rule 45 (expr -> NAME .)
    /               reduce using rule 45 (expr -> NAME .)
    )               reduce using rule 45 (expr -> NAME .)
    AND             reduce using rule 45 (expr -> NAME .)
    OR              reduce using rule 45 (expr -> NAME .)
    ?               reduce using rule 45 (expr -> NAME .)
    }               reduce using rule 45 (expr -> NAME .)
    ,               reduce using rule 45 (expr -> NAME .)
    ]               reduce using rule 45 (expr -> NAME .)
    :               reduce using rule 45 (expr -> NAME .)
    ;               reduce using rule 45 (expr -> NAME .)


state 42

    (46) expr -> ID .

    EQ              reduce using rule 46 (expr -> ID .)
    GE              reduce using rule 46 (expr -> ID .)
    >               reduce using rule 46 (expr -> ID .)
    <               reduce using rule 46 (expr -> ID .)
    LE              reduce using rule 46 (expr -> ID .)
    +               reduce using rule 46 (expr -> ID .)
    -               reduce using rule 46 (expr -> ID .)
    *               reduce using rule 46 (expr -> ID .)
    /               reduce using rule 46 (expr -> ID .)
    )               reduce using rule 46 (expr -> ID .)
    AND             reduce using rule 46 (expr -> ID .)
    OR              reduce using rule 46 (expr -> ID .)
    ?               reduce using rule 46 (expr -> ID .)
    }               reduce using rule 46 (expr -> ID .)
    ,               reduce using rule 46 (expr -> ID .)
    ]               reduce using rule 46 (expr -> ID .)
    :               reduce using rule 46 (expr -> ID .)
    ;               reduce using rule 46 (expr -> ID .)


state 43

    (41) list -> [ . expr_list ]
    (56) expr_list -> . expr , expr_list
    (57) expr_list -> . expr
    (33) expr -> . test
    (34) expr -> . test ? expr : expr
    (35) expr -> . expr + expr
    (36) expr -> . expr - expr
    (37) expr -> . expr * expr
    (38) expr -> . expr / expr
    (39) expr -> . - expr
    (40) expr -> . list
    (42) expr -> . map
    (43) expr -> . ( expr )
    (44) expr -> . value
    (45) expr -> . NAME
    (46) expr -> . ID
    (47) test -> . expr EQ expr
    (48) test -> . expr GE expr
    (49) test -> . expr > expr
    (50) test -> . expr < expr
    (51) test -> . expr LE expr
    (52) test -> . ( test )
    (53) test -> . test AND test
    (54) test -> . ! test
    (55) test -> . test OR test
    (41) list -> . [ expr_list ]
    (58) map -> . { mappings }
    (62) value -> . FLOAT
    (63) value -> . INT
    (64) value -> . STRING
    (65) value -> . TRUE
    (66) value -> . FALSE

    -               shift and go to state 37
    (               shift and go to state 81
    NAME            shift and go to state 41
    ID              shift and go to state 42
    !               shift and go to state 36
    [               shift and go to state 43
    {               shift and go to state 23
    FLOAT           shift and go to state 44
    INT             shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48

    expr_list                      shift and go to state 82
    expr                           shift and go to state 83
    test                           shift and go to state 80
    list                           shift and go to state 38
    map                            shift and go to state 39
    value                          shift and go to state 40

state 44

    (62) value -> FLOAT .

    EQ              reduce using rule 62 (value -> FLOAT .)
    GE              reduce using rule 62 (value -> FLOAT .)
    >               reduce using rule 62 (value -> FLOAT .)
    <               reduce using rule 62 (value -> FLOAT .)
    LE              reduce using rule 62 (value -> FLOAT .)
    +               reduce using rule 62 (value -> FLOAT .)
    -               reduce using rule 62 (value -> FLOAT .)
    *               reduce using rule 62 (value -> FLOAT .)
    /               reduce using rule 62 (value -> FLOAT .)
    )               reduce using rule 62 (value -> FLOAT .)
    AND             reduce using rule 62 (value -> FLOAT .)
    OR              reduce using rule 62 (value -> FLOAT .)
    ?               reduce using rule 62 (value -> FLOAT .)
    }               reduce using rule 62 (value -> FLOAT .)
    ,               reduce using rule 62 (value -> FLOAT .)
    ]               reduce using rule 62 (value -> FLOAT .)
    :               reduce using rule 62 (value -> FLOAT .)
    ;               reduce using rule 62 (value -> FLOAT .)


state 45

    (63) value -> INT .

    EQ              reduce using rule 63 (value -> INT .)
    GE              reduce using rule 63 (value -> INT .)
    >               reduce using rule 63 (value -> INT .)
    <               reduce using rule 63 (value -> INT .)
    LE              reduce using rule 63 (value -> INT .)
    +               reduce using rule 63 (value -> INT .)
    -               reduce using rule 63 (value -> INT .)
    *               reduce using rule 63 (value -> INT .)
    /               reduce using rule 63 (value -> INT .)
    )               reduce using rule 63 (value -> INT .)
    AND             reduce using rule 63 (value -> INT .)
    OR              reduce using rule 63 (value -> INT .)
    ?               reduce using rule 63 (value -> INT .)
    }               reduce using rule 63 (value -> INT .)
    ,               reduce using rule 63 (value -> INT .)
    ]               reduce using rule 63 (value -> INT .)
    :               reduce using rule 63 (value -> INT .)
    ;               reduce using rule 63 (value -> INT .)


state 46

    (64) value -> STRING .

    EQ              reduce using rule 64 (value -> STRING .)
    GE              reduce using rule 64 (value -> STRING .)
    >               reduce using rule 64 (value -> STRING .)
    <               reduce using rule 64 (value -> STRING .)
    LE              reduce using rule 64 (value -> STRING .)
    +               reduce using rule 64 (value -> STRING .)
    -               reduce using rule 64 (value -> STRING .)
    *               reduce using rule 64 (value -> STRING .)
    /               reduce using rule 64 (value -> STRING .)
    )               reduce using rule 64 (value -> STRING .)
    AND             reduce using rule 64 (value -> STRING .)
    OR              reduce using rule 64 (value -> STRING .)
    ?               reduce using rule 64 (value -> STRING .)
    }               reduce using rule 64 (value -> STRING .)
    ,               reduce using rule 64 (value -> STRING .)
    ]               reduce using rule 64 (value -> STRING .)
    :               reduce using rule 64 (value -> STRING .)
    ;               reduce using rule 64 (value -> STRING .)


state 47

    (65) value -> TRUE .

    EQ              reduce using rule 65 (value -> TRUE .)
    GE              reduce using rule 65 (value -> TRUE .)
    >               reduce using rule 65 (value -> TRUE .)
    <               reduce using rule 65 (value -> TRUE .)
    LE              reduce using rule 65 (value -> TRUE .)
    +               reduce using rule 65 (value -> TRUE .)
    -               reduce using rule 65 (value -> TRUE .)
    *               reduce using rule 65 (value -> TRUE .)
    /               reduce using rule 65 (value -> TRUE .)
    )               reduce using rule 65 (value -> TRUE .)
    AND             reduce using rule 65 (value -> TRUE .)
    OR              reduce using rule 65 (value -> TRUE .)
    ?               reduce using rule 65 (value -> TRUE .)
    }               reduce using rule 65 (value -> TRUE .)
    ,               reduce using rule 65 (value -> TRUE .)
    ]               reduce using rule 65 (value -> TRUE .)
    :               reduce using rule 65 (value -> TRUE .)
    ;               reduce using rule 65 (value -> TRUE .)


state 48

    (66) value -> FALSE .

    EQ              reduce using rule 66 (value -> FALSE .)
    GE              reduce using rule 66 (value -> FALSE .)
    >               reduce using rule 66 (value -> FALSE .)
    <               reduce using rule 66 (value -> FALSE .)
    LE              reduce using rule 66 (value -> FALSE .)
    +               reduce using rule 66 (value -> FALSE .)
    -               reduce using rule 66 (value -> FALSE .)
    *               reduce using rule 66 (value -> FALSE .)
    /               reduce using rule 66 (value -> FALSE .)
    )               reduce using rule 66 (value -> FALSE .)
    AND             reduce using rule 66 (value -> FALSE .)
    OR              reduce using rule 66 (value -> FALSE .)
    ?               reduce using rule 66 (value -> FALSE .)
    }               reduce using rule 66 (value -> FALSE .)
    ,               reduce using rule 66 (value -> FALSE .)
    ]               reduce using rule 66 (value -> FALSE .)
    :               reduce using rule 66 (value -> FALSE .)
    ;               reduce using rule 66 (value -> FALSE .)


state 49

    (17) edit -> NAME NAME .
    (20) edit -> NAME NAME . script
    (24) script -> . { statements }

    >               reduce using rule 17 (edit -> NAME NAME .)
    {               shift and go to state 19

    script                         shift and go to state 84

state 50

    (19) edit -> NAME script .

    >               reduce using rule 19 (edit -> NAME script .)


state 51

    (24) script -> { statements . }

    }               shift and go to state 85


state 52

    (25) statements -> statement .
    (26) statements -> statement . ; statements

    }               reduce using rule 25 (statements -> statement .)
    ;               shift and go to state 86


state 53

    (27) statement -> POP . var
    (61) var -> . NAME

    NAME            shift and go to state 55

    var                            shift and go to state 87

state 54

    (28) statement -> var . = expr
    (29) statement -> var . PE expr
    (30) statement -> var . ME expr
    (31) statement -> var . TE expr
    (32) statement -> var . DE expr

    =               shift and go to state 88
    PE              shift and go to state 89
    ME              shift and go to state 90
    TE              shift and go to state 91
    DE              shift and go to state 92


state 55

    (61) var -> NAME .

    =               reduce using rule 61 (var -> NAME .)
    PE              reduce using rule 61 (var -> NAME .)
    ME              reduce using rule 61 (var -> NAME .)
    TE              reduce using rule 61 (var -> NAME .)
    DE              reduce using rule 61 (var -> NAME .)
    ;               reduce using rule 61 (var -> NAME .)
    }               reduce using rule 61 (var -> NAME .)

